# kube-dep

./: .gitlab-ci.yml  .gitmodules  README.md  build.sh  example.jsonnet  jsonnetfile.lock.json  mkdocs.yml  pyproject.toml
GitOps/: .dockerignore  .kluctl.yaml  Dockerfile  deployment.yaml  genssh.sh  gitops-sync.py  pyproject.toml
app-deploy/: .kluctl.yaml  app-template.yaml  deployment.yaml  redis-template.yaml
app-deploy/app/: app-deployment.yaml  app-ingressroute.yaml  app-service.yaml  app-servicemonitor.yaml
app-deploy/redis/: redis-deployment.yaml  redis-pvc.yaml  redis-service.yaml  redis-servicemonitor.yaml
base/: .templateignore
base-deploy/: .gitmodules  .kluctl.yaml  controller.sample.yaml  deployment.yaml
base-deploy/kube-prometheus-custom/: build.sh
docs/: ci.md  git.md  index.md  kube.md
manifests/: alertmanager-alertmanager.yaml  alertmanager-podDisruptionBudget.yaml  alertmanager-prometheusRule.yaml  alertmanager-secret.yaml  alertmanager-service.yaml  alertmanager-serviceAccount.yaml  alertmanager-serviceMonitor.yaml  grafana-config.yaml  grafana-dashboardDatasources.yaml  grafana-dashboardDefinitions.yaml  grafana-dashboardSources.yaml  grafana-deployment.yaml  grafana-prometheusRule.yaml  grafana-service.yaml  grafana-serviceAccount.yaml  grafana-serviceMonitor.yaml  kube-state-metrics-deployment.yaml  kube-state-metrics-serviceMonitor.yaml  kubernetes-prometheusRule.yaml  node-exporter-daemonset.yaml  node-exporter-prometheusRule.yaml  prometheus-clusterRole.yaml  prometheus-clusterRoleBinding.yaml  prometheus-operator-prometheusRule.yaml  prometheus-operator-serviceMonitor.yaml  prometheus-podDisruptionBudget.yaml  prometheus-prometheus.yaml  prometheus-prometheusRule.yaml  prometheus-roleBindingConfig.yaml  prometheus-roleBindingSpecificNamespaces.yaml  prometheus-roleConfig.yaml  prometheus-roleSpecificNamespaces.yaml  prometheus-service.yaml  prometheus-serviceAccount.yaml  prometheus-serviceMonitor.yaml
setup/: prometheus-operator-serviceAccount.yaml
(+28 files in other folders)
