[tool.poetry]
name = "sae601"
version = "0.1.0"
description = ""
authors = ["Nicolas signed-log FORMICHELLA <stigpro@outlook.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.17"
mkdocstrings = {extras = ["python"], version = "^0.24.3"}
pymdown-extensions = "^10.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
